--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONG_URL='mongodb+srv://henry3:FPUOwYEcf6BBzEjY@cluster0.nr8ol.mongodb.net/'
+MONGO_URL = 'mongodb+srv://henry3:FPUOwYEcf6BBzEjY@cluster0.nr8ol.mongodb.net/contactless?retryWrites=true&w=majority'
 PORT=7000
 JWT="54235345634523454235435435345"
