--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.1"
   }
 }
